Fix: Nav Bar User Dropdown
Because:
* It was covering half the avatar and looking a bit dated.

This commit:
* Fixes the alignment issues with the avatar and dropdown menu.
* Updates the styling of the dropdown to be more consistent with our cards.
* Use our own JS for the dropdown instead of the bootstrap provided JS.

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -46,6 +46,7 @@
   .navbar-nav {
     color: #676767;
     white-space: nowrap;
+    align-items: center;
 
     hr {
       display: none;
@@ -78,100 +79,20 @@
       font-size: 1.5em;
       line-height: 78px;
     }
+
     .avatar {
-      margin-top: 37.8px;
       width: 30px;
       height: 30px;
       @include border-radius(50%);
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: contain;
-      background-color: $white;
       margin-left: 0.5rem;
-
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    .drop-down-link{
-      color: $primary;
-      &:hover, &.active {
-        color: $black;
-        -webkit-filter: saturate(50) grayscale(1);
-        filter: saturate(50) grayscale(1)
-      }
-    }
-
-    #dash-active {
-      border-bottom:2px solid $light-grey;
-    }
-
-    .dropdown-menu-top {
-      margin-top: -30px;
-    }
-
-    .menu-options li {
-      vertical-align: top;
-      font-family: $body-fonts;
-      font-size: 16px;
-      line-height: 1.88;
-      letter-spacing: 0.2px;
-    }
-    .menu-options {
-      border:0;
-      padding: 8px;
-      @include box-shadow(0 5px 16px 0 $very-pale-grey);
-      margin: -30px 0 0 -65px;
-    }
-    //box triangle css
-    .menu-options:after, .menu-options:before {
-      bottom: 100%;
-      left: 50%;
-      border: solid transparent;
-      content: " ";
-      height: 0;
-      width: 0;
-      position: absolute;
-      pointer-events: none;
-    }
-    .menu-options:after {
-      border-color: rgba(255, 255, 255, 0);
-      border-bottom-color: #ffffff;
-      filter: drop-shadow(10px 0px 0px 0px rgba(0,0,0,0.1));
-      border-width: 10px;
-      margin-left: -10px;
-    }
-    .menu-options:before {
-      border-color: rgba(0, 0, 0, 0);
-      border-bottom-color: transparent;
-      border-width: 12px;
-      margin-left: -12px;
-    }
-    .drop-down-logo {
-      vertical-align: top;
-      display: inline-block;
-      margin: 0 3px;
-      width: 30px;
-      height: 32.5px;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
-    .dashboard-logo {
-      background-image: image-url('icons/icon-dashboard.svg');
-    }
-    .settings-logo {
-      background-image: image-url('icons/icon-settings.svg');
-    }
-    .logout-logo {
-      background-image: image-url('icons/icon-logout.svg');
+      cursor: pointer;
     }
   }
 }
 
 @media (min-width: 768px) and (max-width: 1024px)  {
   .navbar{
-    padding: 0px 30px 0px 30px    
+    padding: 0px 30px 0px 30px;
   }
 }
 
